--- a/client/datepicker.html
+++ b/client/datepicker.html
@@ -1,7 +1,8 @@
-<template name="rentalProducts-datepicker">
+<template name="rentalProductsDatepicker">
   <div class="input-daterange input-group" id="datepicker">
-      <input type="text" class="input-sm form-control" name="start" />
+      <input type="text" class="input-sm form-control start" id="rental-start" name="start" value={{startDate}} />
       <span class="input-group-addon">to</span>
-      <input type="text" class="input-sm form-control" name="end" />
+      <input type="text" class="input-sm form-control end" id="rental-end" name="end" value="{{endDate}}" />
   </div>
+  <span>{{rentalLength}}</span>
 </template>
